@@ -1,9 +1,9 @@
 Package: soilDB
 Type: Package
 Title: Soil Database Interface
-Version: 0.9-2
-Date: 2012-12-18
-Packaged: 2012-12-18; dylan
+Version: 0.9-3
+Date: 2013-01-08
+Packaged: 2013-01-08; dylan
 Author: D.E. Beaudette and J.M. Skovlin
 Maintainer: D.E. Beaudette <dylan.beaudette@ca.usda.gov>
 Description: A collection of functions for reading data from USDA-NCSS soil databases.
@@ -12,3 +12,5 @@ LazyLoad: yes
 Depends: R (>= 2.9.0), RODBC, aqp
 Imports: methods, plyr, reshape, Hmisc
 Suggests: lattice, rgdal, RCurl, XML, SSOAP, XMLSchema, dismo
+Repository: CRAN
+URL: http://aqp.r-forge.r-project.org/
