@@ -1,3 +1,6 @@
+-------------------------- soilDB 0.9-3 (2013-01-08) ----------------------------
+* speed-bump in color-fetching functions from NASIS/pedonPC
+
 -------------------------- soilDB 0.9-2 (2012-12-18) ----------------------------
 * new functions for getting / plotting the geographic extent of a soil series, using the SoilWeb query service:
   -seriesExtent() : fetches extent as a SpatialPolygonDataFrame
